[gd_scene load_steps=13 format=3 uid="uid://dflfpxxokvf6g"]

[ext_resource type="Texture2D" uid="uid://da0ohgcwlicmu" path="res://images/game_over_back1.png" id="1_0d405"]
[ext_resource type="FontFile" uid="uid://fms0ehcnnkuc" path="res://fonts/Bitcount_Grid_Double/BitcountGridDouble-VariableFont_CRSV,ELSH,ELXP,slnt,wght.ttf" id="1_jwknv"]
[ext_resource type="FontFile" uid="uid://cv1akwkp83105" path="res://fonts/Bungee-Regular.ttf" id="2_0ed3l"]
[ext_resource type="Script" path="res://Scenes/screens/restart_button.gd" id="3_7klbp"]
[ext_resource type="Script" path="res://Scenes/screens/main_menu_button.gd" id="4_spj0l"]
[ext_resource type="Texture2D" uid="uid://b4p642gck3ihq" path="res://images/Game_Over_Font.png" id="6_pwpy2"]
[ext_resource type="AudioStream" uid="uid://ds5pamxvrshpt" path="res://music/game_over/game_over.mp3" id="7_lh18p"]
[ext_resource type="AudioStream" uid="uid://fkmjx7q4h02t" path="res://music/buttons/select_cut.mp3" id="8_0jvwq"]
[ext_resource type="AudioStream" uid="uid://wjgl0rwwmg6i" path="res://music/buttons/hover_cut.mp3" id="9_xq75o"]

[sub_resource type="Theme" id="Theme_5rsdc"]
default_font = ExtResource("1_jwknv")
default_font_size = 120

[sub_resource type="Theme" id="Theme_f1ixu"]
default_font = ExtResource("2_0ed3l")
default_font_size = 40

[sub_resource type="Theme" id="Theme_lxms4"]
default_font = ExtResource("2_0ed3l")
default_font_size = 40

[node name="Game_Over_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0
texture = ExtResource("1_0d405")
expand_mode = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 252.0
offset_top = 139.0
offset_right = 900.0
offset_bottom = 284.0
theme = SubResource("Theme_5rsdc")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "GAME OVER"

[node name="restartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 693.0
offset_top = 47.0
offset_right = 1090.0
offset_bottom = 126.0
theme = SubResource("Theme_f1ixu")
theme_override_colors/font_hover_color = Color(0.337255, 0.517647, 0.568627, 1)
text = "REINICIAR NIVEL"
flat = true
script = ExtResource("3_7klbp")

[node name="mainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 693.0
offset_top = 122.0
offset_right = 1075.0
offset_bottom = 201.0
theme = SubResource("Theme_lxms4")
theme_override_colors/font_hover_color = Color(0.329412, 0.517647, 0.560784, 1)
text = "MENÃš PRINCIPAL"
flat = true
script = ExtResource("4_spj0l")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 17.0
offset_right = 502.0
offset_bottom = 338.0
texture = ExtResource("6_pwpy2")
expand_mode = 1

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lh18p")
autoplay = true
parameters/looping = false

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0jvwq")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xq75o")

[connection signal="mouse_entered" from="restartButton" to="restartButton" method="_on_mouse_entered"]
[connection signal="pressed" from="restartButton" to="restartButton" method="_on_pressed"]
[connection signal="mouse_entered" from="mainMenuButton" to="mainMenuButton" method="_on_mouse_entered"]
[connection signal="pressed" from="mainMenuButton" to="restartButton" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="mainMenuButton" to="mainMenuButton" method="_on_pressed"]
